# rzex

./: .env.example  .eslintrc.json  .gitignore  .replit  CODE_OF_CONDUCT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  codeql.yml  main_rzex.yml
.migration-backup/: .env.example  .gitignore  .replit  LICENSE  README.md  package.json
.migration-backup/.github/workflows/: ci.yml  main_rzex.yml
.migration-backup/backend-deploy/: main.py  pyproject.toml
.migration-backup/docs/api/: README.md
.migration-backup/docs/deployment/: README.md
.migration-backup/scripts/: deploy.sh
artifacts/rzex/: index.html  package.json
backend/api-gateway/: README.md  package.json
docs/api/: README.md
frontend/: Dockerfile  next.config.js  package.json
frontend/src/lib/: api.ts
frontend/web/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
infra/kubernetes/: frontend.yml  market-data-service.yml  secrets.yml  user-service.yml  wallet-service.yml
infra/nginx/: nginx.conf
infrastructure/database/: mongo-init.js  schema.sql
infrastructure/redis/: redis.conf
scripts/: deploy.sh
services/api-gateway/: package-lock.json  package.json
services/market-data-service/: package-lock.json
services/notification-service/: Dockerfile  package-lock.json  package.json
services/trading-engine/: Dockerfile  package-lock.json  package.json
services/user-service/: Dockerfile  package-lock.json  package.json
services/wallet-service/: package-lock.json  package.json
(+124 files in other folders)
